# astraeus

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  swiss-files.yml
crates/astraeus-artifacts/: Cargo.toml
crates/astraeus-artifacts/src/: lib.rs
crates/astraeus-artifacts/tests/: artifacts.rs
crates/astraeus-cli/: Cargo.toml
crates/astraeus-cli/src/: main.rs
crates/astraeus-cli/tests/: cli.rs
crates/astraeus-comparison/: Cargo.toml
crates/astraeus-comparison/src/: lib.rs
crates/astraeus-comparison/tests/: comparison.rs
crates/astraeus-core/: Cargo.toml
crates/astraeus-core/src/: adapter.rs  aspects.rs  error.rs  lib.rs  placements.rs  types.rs
crates/astraeus-core/tests/: aspects.rs  contracts.rs  placements.rs
crates/astraeus-derived/: Cargo.toml
crates/astraeus-derived/src/: lib.rs
crates/astraeus-derived/tests/: derived.rs
crates/astraeus-events/: Cargo.toml
crates/astraeus-events/src/: lib.rs
crates/astraeus-events/tests/: events.rs
crates/astraeus-fixtures/: Cargo.toml
crates/astraeus-fixtures/src/: compare.rs  fixture.rs  lib.rs  swetest.rs
crates/astraeus-fixtures/tests/: golden.rs
crates/astraeus-specifications/: Cargo.toml
crates/astraeus-specifications/src/: lib.rs
crates/astraeus-specifications/tests/: specifications.rs
crates/astraeus-swiss/: Cargo.toml
crates/astraeus-swiss/src/: lib.rs
crates/astraeus-swiss/tests/: adapter.rs
crates/astraeus-techniques/: Cargo.toml
crates/astraeus-techniques/src/: lib.rs
crates/astraeus-techniques/tests/: techniques.rs
crates/astraeus-western/: Cargo.toml
crates/astraeus-western/src/: lib.rs
crates/astraeus-western/tests/: western.rs
docs/: ARTIFACTS.md  ASPECTS.md  CHART_SPECIFICATIONS.md  COMPARISONS.md  DERIVED_ARTIFACTS.md  ENGINE_REQUIREMENTS.md  EPHEMERAL_RUNNER.md  EVENTS.md  PROJECT_ORGANIZATION.md  PROVENANCE.md  SWISS_EPHEMERIS.md  TECHNIQUES.md  VALIDATION.md  WESTERN_POLICIES.md
fixtures/swetest-v2.10.03/: 2024-new-york-sidereal-fagan-koch.json  2024-new-york-sidereal-fagan-koch.stdout  2024-new-york-tropical-koch.json  2024-new-york-tropical-koch.stdout  SWISS_PROVENANCE.md  j2000-greenwich-sidereal-lahiri-placidus.json  j2000-greenwich-sidereal-lahiri-placidus.stdout  j2000-greenwich-swiss-sidereal-lahiri.stdout  j2000-greenwich-swiss-tropical.stdout  j2000-greenwich-tropical-placidus.json  j2000-greenwich-tropical-placidus.stdout
