[workspace]
members = ["crates/astraeus-core"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/gracee3/astraeus"
rust-version = "1.97"

[workspace.dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
