[package]
name = "astraeus-artifacts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Versioned calculation artifacts for Astraeus"

[dependencies]
astraeus-core = { path = "../astraeus-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
