[package]
name = "astraeus-comparison"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Versioned two-chart comparison artifacts for Astraeus"

[dependencies]
astraeus-core = { version = "0.1.0", path = "../astraeus-core" }
astraeus-derived = { version = "0.1.0", path = "../astraeus-derived" }
astraeus-techniques = { version = "0.1.0", path = "../astraeus-techniques" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
astraeus-artifacts = { version = "0.1.0", path = "../astraeus-artifacts" }
astraeus-specifications = { version = "0.1.0", path = "../astraeus-specifications" }
