[package]
name = "astraeus-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Validated domain and ephemeris contracts for Astraeus"

[dependencies]
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
