[package]
name = "astraeus-events"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
astraeus-artifacts = { version = "0.1.0", path = "../astraeus-artifacts" }
astraeus-core = { version = "0.1.0", path = "../astraeus-core" }
astraeus-derived = { version = "0.1.0", path = "../astraeus-derived" }
astraeus-specifications = { version = "0.1.0", path = "../astraeus-specifications" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
