[package]
name = "astraeus-specifications"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Versioned reusable chart specifications for Astraeus"

[dependencies]
astraeus-core = { version = "0.1.0", path = "../astraeus-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
