[package]
name = "astraeus-swiss"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Swiss Ephemeris adapter for Astraeus"

[dependencies]
astraeus-core = { version = "0.1.0", path = "../astraeus-core" }
chrono.workspace = true
sweph-sys.workspace = true

[dev-dependencies]
astraeus-fixtures = { version = "0.1.0", path = "../astraeus-fixtures" }
tempfile = "3.20.0"
